--- a/main/lib/project.html
+++ b/main/lib/project.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Cloudflare Web Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <style>
         :root {
@@ -23,7 +25,7 @@
 
         body {
             background-color: var(--background-color);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Poppins', sans-serif;
             color: var(--text-color);
             line-height: 1.6;
         }
@@ -315,6 +317,69 @@
             background-color: white;
             font-size: 16px;
         }
+
+        .empty-state {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 60vh;
+            text-align: center;
+            background-color: #f8f9fa;
+            border-radius: 15px;
+            padding: 2rem;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .empty-state:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
+        }
+
+        .empty-state-icon {
+            font-size: 5rem;
+            color: #3498db;
+            margin-bottom: 1rem;
+        }
+
+        .empty-state h2 {
+            font-weight: 600;
+            color: #2c3e50;
+            margin-bottom: 1rem;
+        }
+
+        .empty-state p {
+            color: #7f8c8d;
+            max-width: 80%;
+            margin-bottom: 2rem;
+        }
+
+        .btn-add-first {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 0.75rem 2rem;
+            font-size: 1.1rem;
+            border-radius: 50px;
+            transition: all 0.3s ease;
+        }
+
+        .btn-add-first:hover {
+            background-color: #2980b9;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(52, 152, 219, 0.4);
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+            40% {transform: translateY(-30px);}
+            60% {transform: translateY(-15px);}
+        }
+
+        .empty-state-icon {
+            animation: bounce 2s infinite;
+        }
     </style>
 </head>
 <body>
@@ -407,19 +472,30 @@
         let categories = new Set(['all']);
 
         function loadProjects() {
-            const savedProjects = localStorage.getItem('bookProjects');
-            if (savedProjects) {
-                projects = JSON.parse(savedProjects);
-                updateCategories();
-                renderProjects();
+            try {
+                const savedProjects = localStorage.getItem('bookProjects');
+                if (savedProjects) {
+                    projects = JSON.parse(savedProjects);
+                    updateCategories();
+                    renderProjects();
+                }
+            } catch (error) {
+                console.error('Error loading projects:', error);
+                alert('There was an error loading your projects. Please try refreshing the page.');
             }
         }
 
         function saveProjects() {
-            localStorage.setItem('bookProjects', JSON.stringify(projects));
+            try {
+                localStorage.setItem('bookProjects', JSON.stringify(projects));
+            } catch (error) {
+                console.error('Error saving projects:', error);
+                alert('There was an error saving your projects. Please try again.');
+            }
         }
 
         function updateCategories() {
+            categories = new Set(['all']);
             projects.forEach(project => {
                 if (project.genre) {
                     categories.add(project.genre);
@@ -431,7 +507,7 @@
         function renderCategoryOptions() {
             const categorySelect = document.getElementById('category-filter');
             categorySelect.innerHTML = '<option value="all">All Categories</option>';
-            categories.forEach(category => {
+            Array.from(categories).sort().forEach(category => {
                 if (category !== 'all') {
                     const option = document.createElement('option');
                     option.value = category;
@@ -444,87 +520,90 @@
         async function renderProjects(category = 'all') {
             const bookList = document.getElementById('book-list');
             bookList.innerHTML = '';
-            for (let i = 0; i < projects.length; i++) {
-                const project = projects[i];
-                if (category === 'all' || project.genre === category) {
-                    const projectElement = document.createElement('div');
-                    projectElement.className = 'col';
-                    const coverUrl = await fetchBookCover(project.title);
-                    const statusClass = getStatusClass(project.status);
-                    projectElement.innerHTML = `
-                        <div class="card h-100 book-project">
-                            <img src="${coverUrl}" class="card-img-top book-cover" alt="${project.title} cover">
-                            <div class="card-body">
-                                <h5 class="card-title">${project.title}</h5>
-                                <p class="card-text">
-                                    <span class="status-badge ${statusClass}"><i class="fas fa-circle me-1"></i>${project.status}</span>
-                                </p>
-                                <p class="card-text"><small class="text-muted"><i class="fas fa-tag me-1"></i>${project.genre}</small></p>
-                            </div>
-                            <div class="card-footer bg-transparent border-0">
-                                <div class="project-actions">
-                                    <a href="${project.link}" target="_blank" class="btn btn-outline-primary btn-sm btn-open-project">
-                                        <i class="fas fa-external-link-alt me-1"></i>Open Project
-                                    </a>
-                                    <button class="btn btn-outline-danger btn-sm" onclick="showDeleteConfirmation(${i})">
-                                        <i class="fas fa-trash-alt me-1"></i>Delete
-                                    </button>
-                                </div>
+
+            if (projects.length === 0) {
+                bookList.innerHTML = `
+                    <div class="col-12">
+                        <div class="empty-state">
+                            <i class="fas fa-book-open empty-state-icon"></i>
+                            <h2>Your bookshelf is empty!</h2>
+                            <p>Start your literary journey by adding your first book project.</p>
+                            <button class="btn btn-add-first" onclick="openModal()">
+                                <i class="fas fa-plus me-2"></i>Add Your First Project
+                            </button>
+                        </div>
+                    </div>
+                `;
+                return;
+            }
+
+            const fragment = document.createDocumentFragment();
+
+            const filteredProjects = category === 'all' 
+                ? projects 
+                : projects.filter(project => project.genre === category);
+
+            const renderPromises = filteredProjects.map(async (project, index) => {
+                const projectElement = document.createElement('div');
+                projectElement.className = 'col';
+                const coverUrl = await fetchBookCover(project.title);
+                const statusClass = getStatusClass(project.status);
+                projectElement.innerHTML = `
+                    <div class="card h-100 book-project">
+                        <img src="${coverUrl}" class="card-img-top book-cover" alt="${project.title} cover" loading="lazy">
+                        <div class="card-body">
+                            <h5 class="card-title">${escapeHtml(project.title)}</h5>
+                            <p class="card-text">
+                                <span class="status-badge ${statusClass}"><i class="fas fa-circle me-1"></i>${escapeHtml(project.status)}</span>
+                            </p>
+                            <p class="card-text"><small class="text-muted"><i class="fas fa-tag me-1"></i>${escapeHtml(project.genre)}</small></p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0">
+                            <div class="project-actions">
+                                <a href="${escapeHtml(project.link)}" target="_blank" class="btn btn-outline-primary btn-sm btn-open-project">
+                                    <i class="fas fa-external-link-alt me-1"></i>Open Project
+                                </a>
+                                <button class="btn btn-outline-danger btn-sm" onclick="showDeleteConfirmation(${index})">
+                                    <i class="fas fa-trash-alt me-1"></i>Delete
+                                </button>
                             </div>
                         </div>
-                    `;
-                    bookList.appendChild(projectElement);
-                }
-            }
-        }
+                    </div>
+                `;
+                return projectElement;
+            });
 
-        function getStatusClass(status) {
-            switch(status) {
-                case 'In Progress': return 'bg-warning text-dark';
-                case 'Completed': return 'bg-success text-white';
-                case 'Planning': return 'bg-info text-dark';
-                default: return 'bg-secondary text-white';
-            }
-        }
-
-        async function fetchBookCover(title) {
             try {
-                const response = await fetch(`https://openlibrary.org/search.json?title=${encodeURIComponent(title)}&limit=1`);
-                const data = await response.json();
-                if (data.docs.length > 0 && data.docs[0].cover_i) {
-                    return `https://covers.openlibrary.org/b/id/${data.docs[0].cover_i}-M.jpg`;
-                }
+                const renderedProjects = await Promise.all(renderPromises);
+                renderedProjects.forEach(element => fragment.appendChild(element));
+                bookList.appendChild(fragment);
             } catch (error) {
-                console.error('Error fetching book cover:', error);
+                console.error('Error rendering projects:', error);
+                bookList.innerHTML = '<p class="text-center">There was an error loading the projects. Please try refreshing the page.</p>';
             }
-            return 'https://via.placeholder.com/200x300?text=No+Cover';
         }
 
-        function openModal() {
-            modal.show();
+        function escapeHtml(unsafe) {
+            return unsafe
+                .replace(/&/g, "&amp;")
+                .replace(/</g, "&lt;")
+                .replace(/>/g, "&gt;")
+                .replace(/"/g, "&quot;")
+                .replace(/'/g, "&#039;");
         }
-
-        function closeModal() {
-            modal.hide();
-        }
-
-        document.getElementById('add-project-form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            addNewProject();
-        });
 
         function addNewProject() {
-            const title = document.getElementById('project-title').value;
+            const title = document.getElementById('project-title').value.trim();
             const status = document.getElementById('project-status').value;
-            const genre = document.getElementById('project-genre').value;
-            const link = document.getElementById('project-link').value;
+            const genre = document.getElementById('project-genre').value.trim();
+            const link = document.getElementById('project-link').value.trim();
 
             if (title && status && genre && link) {
                 const newProject = { title, status, genre, link };
                 projects.push(newProject);
                 saveProjects();
                 updateCategories();
-                renderProjects();
+                renderProjects(document.getElementById('category-filter').value);
 
                 // Reset form and close modal
                 document.getElementById('add-project-form').reset();
@@ -560,6 +639,41 @@
                 renderProjects(this.value);
             });
         });
+
+        document.getElementById('add-project-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            addNewProject();
+        });
+
+        function getStatusClass(status) {
+            switch(status) {
+                case 'In Progress': return 'bg-warning text-dark';
+                case 'Completed': return 'bg-success text-white';
+                case 'Planning': return 'bg-info text-dark';
+                default: return 'bg-secondary text-white';
+            }
+        }
+
+        async function fetchBookCover(title) {
+            try {
+                const response = await fetch(`https://openlibrary.org/search.json?title=${encodeURIComponent(title)}&limit=1`);
+                const data = await response.json();
+                if (data.docs.length > 0 && data.docs[0].cover_i) {
+                    return `https://covers.openlibrary.org/b/id/${data.docs[0].cover_i}-M.jpg`;
+                }
+            } catch (error) {
+                console.error('Error fetching book cover:', error);
+            }
+            return 'https://via.placeholder.com/200x300?text=No+Cover';
+        }
+
+        function openModal() {
+            modal.show();
+        }
+
+        function closeModal() {
+            modal.hide();
+        }
     </script>
 </body>
 </html>
