--- a/404.html
+++ b/404.html
@@ -51,6 +51,7 @@
             opacity: 0.1;
             border-radius: 50%;
             z-index: -1;
+            will-change: transform;
         }
 
         .shape-1 {
@@ -75,7 +76,7 @@
         }
 
         .error-code {
-            font-size: 12rem;
+            font-size: clamp(8rem, 15vw, 12rem);
             font-weight: 700;
             color: var(--primary-color);
             line-height: 1;
@@ -88,6 +89,7 @@
             display: inline-block;
             animation: bounce 0.6s ease infinite alternate;
             position: relative;
+            will-change: transform;
         }
 
         .digit:nth-child(2) {
@@ -100,7 +102,7 @@
 
         @keyframes bounce {
             to {
-                top: -20px;
+                transform: translateY(-20px);
                 text-shadow: 0 20px 10px rgba(0, 0, 0, 0.15);
             }
         }
@@ -115,7 +117,7 @@
         }
 
         h2 {
-            font-size: 2.5rem;
+            font-size: clamp(1.5rem, 5vw, 2.5rem);
             font-weight: 600;
             margin-bottom: 1.5rem;
             color: var(--secondary-color);
@@ -123,7 +125,7 @@
         }
 
         p {
-            font-size: 1.2rem;
+            font-size: clamp(1rem, 3vw, 1.2rem);
             margin-bottom: 2.5rem;
             color: var(--text-color);
             opacity: 0.8;
@@ -202,6 +204,7 @@
             box-shadow: 0 0 10px 2px rgba(74, 144, 226, 0.2);
             border-radius: 50%;
             animation: rise 10s infinite ease-in;
+            will-change: transform, opacity;
         }
 
         @keyframes rise {
@@ -221,13 +224,20 @@
             }
         }
 
+        @media (prefers-reduced-motion: reduce) {
+            .background-shape,
+            .digit,
+            .btn::before,
+            .particle {
+                animation: none;
+            }
+
+            .btn:hover {
+                transform: none;
+            }
+        }
+
         @media (max-width: 768px) {
-            .error-code {
-                font-size: 8rem;
-            }
-            h2 {
-                font-size: 2rem;
-            }
             .container {
                 padding: 3rem 1.5rem;
             }
@@ -245,7 +255,7 @@
             <span class="digit" data-digit="4">4</span>
         </div>
         <h2>Page Not Found</h2>
-        <p>Oops! The page you're looking for doesn't exist. It might have been moved or deleted.</p>
+        <p>Oops! The page you're looking for doesn't exist.</p>
         <a href="/" class="btn">Back to Home</a>
     </div>
 
